# FinanceAcitvityAnalyzer

./: Analyzer.hs  Fai.hs  README.markdown  finance-analyzer.cabal
Data/Chase/: Activity.hs
Finance/: Activity.hs
examples/: chase.csv  rules
